Copia del proyecto base

--- a/HuergoMotorsVentas/HuergoMotorsVentas.csproj
+++ b/HuergoMotorsVentas/HuergoMotorsVentas.csproj
@@ -4,10 +4,10 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{1181F56F-7BC3-4414-8A7E-26E6321ABDE1}</ProjectGuid>
+    <ProjectGuid>{58AC622D-4DA1-482D-BEFB-750DF4E8A9D4}</ProjectGuid>
     <OutputType>WinExe</OutputType>
-    <RootNamespace>HuergoMotors</RootNamespace>
-    <AssemblyName>HuergoMotors</AssemblyName>
+    <RootNamespace>HuergoMotorsVentas</RootNamespace>
+    <AssemblyName>HuergoMotorsVentas</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <Deterministic>true</Deterministic>
@@ -44,14 +44,35 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Form1.cs">
+    <Compile Include="frmMDI.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Form1.Designer.cs">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <Compile Include="frmMDI.Designer.cs">
+      <DependentUpon>frmMDI.cs</DependentUpon>
+    </Compile>
+    <Compile Include="frmVehiculos.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="frmVehiculos.Designer.cs">
+      <DependentUpon>frmVehiculos.cs</DependentUpon>
+    </Compile>
+    <Compile Include="frmVehiculosAlta.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="frmVehiculosAlta.Designer.cs">
+      <DependentUpon>frmVehiculosAlta.cs</DependentUpon>
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <EmbeddedResource Include="frmMDI.resx">
+      <DependentUpon>frmMDI.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="frmVehiculos.resx">
+      <DependentUpon>frmVehiculos.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="frmVehiculosAlta.resx">
+      <DependentUpon>frmVehiculosAlta.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
