--- a/HuergoMotorsVentas/HuergoMotorsVentas.csproj
+++ b/HuergoMotorsVentas/HuergoMotorsVentas.csproj
@@ -44,6 +44,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="formHelper.cs" />
     <Compile Include="frmAccesorios.cs">
       <SubType>Form</SubType>
     </Compile>
