Hize el frm ventas

--- a/HuergoMotorsVentas/HuergoMotorsVentas.csproj
+++ b/HuergoMotorsVentas/HuergoMotorsVentas.csproj
@@ -98,6 +98,12 @@
     <Compile Include="frmVendedoresAlta.Designer.cs">
       <DependentUpon>frmVendedoresAlta.cs</DependentUpon>
     </Compile>
+    <Compile Include="frmVentas.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="frmVentas.Designer.cs">
+      <DependentUpon>frmVentas.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="frmAccesorios.resx">
@@ -126,6 +132,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="frmVendedoresAlta.resx">
       <DependentUpon>frmVendedoresAlta.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="frmVentas.resx">
+      <DependentUpon>frmVentas.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
