--- a/HuergoMotors.DTO/HuergoMotors.DTO.csproj
+++ b/HuergoMotors.DTO/HuergoMotors.DTO.csproj
@@ -42,8 +42,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AccesorioDTO.cs" />
     <Compile Include="ClienteDTO.cs" />
-    <Compile Include="HelperDTO.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
