--- a/HuergoMotors.DTO/HuergoMotors.DTO.csproj
+++ b/HuergoMotors.DTO/HuergoMotors.DTO.csproj
@@ -45,6 +45,10 @@
     <Compile Include="AccesorioDTO.cs" />
     <Compile Include="ClienteDTO.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="VehiculoDTO.cs" />
+    <Compile Include="VendedorDTO.cs" />
+    <Compile Include="VentaAccesorioDTO.cs" />
+    <Compile Include="VentaDTO.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
