--- a/HuergoMotors.DAO/HuergoMotors.DAO.csproj
+++ b/HuergoMotors.DAO/HuergoMotors.DAO.csproj
@@ -42,9 +42,18 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AccesoriosAltaDAO.cs" />
+    <Compile Include="AccesoriosDAO.cs" />
     <Compile Include="ClienteDAO.cs" />
+    <Compile Include="ClientesAltaDAO.cs" />
     <Compile Include="HelperDAO.cs" />
+    <Compile Include="MDIDAO.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="VehiculosAltaDAO.cs" />
+    <Compile Include="VehiculosDAO.cs" />
+    <Compile Include="VendedoresAltaDAO.cs" />
+    <Compile Include="VendedoresDAO.cs" />
+    <Compile Include="VentasAltasDAO.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\HuergoMotors.DTO\HuergoMotors.DTO.csproj">
