--- a/HuergoMotors.DAO/HuergoMotors.DAO.csproj
+++ b/HuergoMotors.DAO/HuergoMotors.DAO.csproj
@@ -42,17 +42,14 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="AccesoriosAltaDAO.cs" />
     <Compile Include="AccesoriosDAO.cs" />
     <Compile Include="ClienteDAO.cs" />
     <Compile Include="ClientesAltaDAO.cs" />
     <Compile Include="HelperDAO.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="VehiculosAltaDAO.cs" />
     <Compile Include="VehiculosDAO.cs" />
-    <Compile Include="VendedoresAltaDAO.cs" />
     <Compile Include="VendedoresDAO.cs" />
-    <Compile Include="VentasAltasDAO.cs" />
+    <Compile Include="VentasDAO.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\HuergoMotors.DTO\HuergoMotors.DTO.csproj">
