--- a/HuergoMotors.DAO/HuergoMotors.DAO.csproj
+++ b/HuergoMotors.DAO/HuergoMotors.DAO.csproj
@@ -43,8 +43,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AccesoriosDAO.cs" />
-    <Compile Include="ClienteDAO.cs" />
-    <Compile Include="ClientesAltaDAO.cs" />
+    <Compile Include="ClientesDAO.cs" />
     <Compile Include="HelperDAO.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="VehiculosDAO.cs" />
