--- a/HuergoMotors.Negocio/HuergoMotors.Negocio.csproj
+++ b/HuergoMotors.Negocio/HuergoMotors.Negocio.csproj
@@ -46,8 +46,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AccesoriosNegocio.cs" />
-    <Compile Include="ClienteNegocio.cs" />
-    <Compile Include="ClientesAltaNegocio.cs" />
+    <Compile Include="ClientesNegocio.cs" />
     <Compile Include="HelperNegocio.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="VehiculosNegocio.cs" />
