--- a/HuergoMotorsVentas/HuergoMotors.Forms.csproj
+++ b/HuergoMotorsVentas/HuergoMotors.Forms.csproj
@@ -69,6 +69,12 @@
     <Compile Include="frmVentas.Designer.cs">
       <DependentUpon>frmVentas.cs</DependentUpon>
     </Compile>
+    <Compile Include="frmVentasAccesorios.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="frmVentasAccesorios.Designer.cs">
+      <DependentUpon>frmVentasAccesorios.cs</DependentUpon>
+    </Compile>
     <Compile Include="HelperForms.cs" />
     <Compile Include="frmAccesorios.cs">
       <SubType>Form</SubType>
@@ -161,6 +167,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="frmVentas.resx">
       <DependentUpon>frmVentas.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="frmVentasAccesorios.resx">
+      <DependentUpon>frmVentasAccesorios.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="frmVentasAlta.resx">
       <DependentUpon>frmVentasAlta.cs</DependentUpon>
