--- a/HuergoMotors.DTO/HuergoMotors.DTO.csproj
+++ b/HuergoMotors.DTO/HuergoMotors.DTO.csproj
@@ -42,13 +42,13 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="AccesorioDTO.cs" />
-    <Compile Include="ClienteDTO.cs" />
+    <Compile Include="AccesoriosDTO.cs" />
+    <Compile Include="ClientesDTO.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="VehiculoDTO.cs" />
-    <Compile Include="VendedorDTO.cs" />
-    <Compile Include="VentaAccesorioDTO.cs" />
-    <Compile Include="VentaDTO.cs" />
+    <Compile Include="VehiculosDTO.cs" />
+    <Compile Include="VendedoresDTO.cs" />
+    <Compile Include="VentasAccesoriosDTO.cs" />
+    <Compile Include="VentasDTO.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
