--- a/HuergoMotors.DTO/HuergoMotors.DTO.csproj
+++ b/HuergoMotors.DTO/HuergoMotors.DTO.csproj
@@ -43,12 +43,15 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AccesoriosDTO.cs" />
+    <Compile Include="AccesoriosRDTO.cs" />
     <Compile Include="ClientesDTO.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="VehiculosDTO.cs" />
     <Compile Include="VendedoresDTO.cs" />
     <Compile Include="VentasAccesoriosDTO.cs" />
+    <Compile Include="VentasAccesoriosRDTO.cs" />
     <Compile Include="VentasDTO.cs" />
+    <Compile Include="VentasRDTO.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
