--- a/HuergoMotors.Web/HuergoMotors.Web.csproj
+++ b/HuergoMotors.Web/HuergoMotors.Web.csproj
@@ -66,12 +66,70 @@
     </None>
   </ItemGroup>
   <ItemGroup>
+    <Content Include="webMDI.aspx" />
+    <Content Include="webVendedores.aspx" />
+    <Content Include="webVendedoresAlta.aspx" />
+    <Content Include="webAccesorios.aspx" />
+    <Content Include="webAccesoriosAlta.aspx" />
+    <Content Include="webClientes.aspx" />
+    <Content Include="webClientesAlta.aspx" />
     <Content Include="webVehiculos.aspx" />
     <Content Include="Web.config" />
     <Content Include="webVehiculosAlta.aspx" />
+    <Content Include="webVentas.aspx" />
+    <Content Include="webVentasAlta.aspx" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="webMDI.aspx.cs">
+      <DependentUpon>webMDI.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="webMDI.aspx.designer.cs">
+      <DependentUpon>webMDI.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="webVendedores.aspx.cs">
+      <DependentUpon>webVendedores.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="webVendedores.aspx.designer.cs">
+      <DependentUpon>webVendedores.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="webVendedoresAlta.aspx.cs">
+      <DependentUpon>webVendedoresAlta.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="webVendedoresAlta.aspx.designer.cs">
+      <DependentUpon>webVendedoresAlta.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="webAccesorios.aspx.cs">
+      <DependentUpon>webAccesorios.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="webAccesorios.aspx.designer.cs">
+      <DependentUpon>webAccesorios.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="webAccesoriosAlta.aspx.cs">
+      <DependentUpon>webAccesoriosAlta.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="webAccesoriosAlta.aspx.designer.cs">
+      <DependentUpon>webAccesoriosAlta.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="webClientes.aspx.cs">
+      <DependentUpon>webClientes.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="webClientes.aspx.designer.cs">
+      <DependentUpon>webClientes.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="webClientesAlta.aspx.cs">
+      <DependentUpon>webClientesAlta.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="webClientesAlta.aspx.designer.cs">
+      <DependentUpon>webClientesAlta.aspx</DependentUpon>
+    </Compile>
     <Compile Include="webVehiculos.aspx.cs">
       <DependentUpon>webVehiculos.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
@@ -85,6 +143,20 @@
     </Compile>
     <Compile Include="webVehiculosAlta.aspx.designer.cs">
       <DependentUpon>webVehiculosAlta.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="webVentas.aspx.cs">
+      <DependentUpon>webVentas.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="webVentas.aspx.designer.cs">
+      <DependentUpon>webVentas.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="webVentasAlta.aspx.cs">
+      <DependentUpon>webVentasAlta.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="webVentasAlta.aspx.designer.cs">
+      <DependentUpon>webVentasAlta.aspx</DependentUpon>
     </Compile>
   </ItemGroup>
   <ItemGroup>
