--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,12 @@
 .vs
 
-HuergoMotorsVentas/bin
-HuergoMotorsVentas/obj
-HuergoMotors.DAO/bin
-HuergoMotors.DAO/obj
-HuergoMotors.DTO/bin
-HuergoMotors.DTO/obj
-HuergoMotors.Negocio/bin
-HuergoMotors.Negocio/obj
-HuergoMotors.Web/bin
-HuergoMotors.Web/obj
+HuergoMotorsVentas/bin/
+HuergoMotorsVentas/obj/
+HuergoMotors.DAO/bin/
+HuergoMotors.DAO/obj/
+HuergoMotors.DTO/bin/
+HuergoMotors.DTO/obj/
+HuergoMotors.Negocio/bin/
+HuergoMotors.Negocio/obj/
+HuergoMotors.Web/bin/
+HuergoMotors.Web/obj/
