--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,28 @@
-.vs
-
-HuergoMotorsVentas/bin/
-HuergoMotorsVentas/obj/
-HuergoMotors.DAO/bin/
-HuergoMotors.DAO/obj/
-HuergoMotors.DTO/bin/
-HuergoMotors.DTO/obj/
-HuergoMotors.Negocio/bin/
-HuergoMotors.Negocio/obj/
-HuergoMotors.Web/bin/
-HuergoMotors.Web/obj/
+#ignore thumbnails created by windows
+Thumbs.db
+#Ignore files build by Visual Studio
+*.obj
+*.exe
+*.pdb
+*.user
+*.aps
+*.pch
+*.vspscc
+*_i.c
+*_p.c
+*.ncb
+*.suo
+*.tlb
+*.tlh
+*.bak
+*.cache
+*.ilk
+*.log
+[Bb]in
+[Dd]ebug*/
+*.lib
+*.sbr
+obj/
+[Rr]elease*/
+_ReSharper*/
+[Tt]est[Rr]esult*
