--- a/HuergoMotors.DTO/HuergoMotors.DTO.csproj
+++ b/HuergoMotors.DTO/HuergoMotors.DTO.csproj
@@ -47,6 +47,7 @@
     <Compile Include="ClientesDTO.cs" />
     <Compile Include="DTOBase.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="UsuarioDTO.cs" />
     <Compile Include="VehiculosDTO.cs" />
     <Compile Include="VendedoresDTO.cs" />
     <Compile Include="VentasAccesoriosDTO.cs" />
