--- a/HuergoMotors.Web/HuergoMotors.Web.csproj
+++ b/HuergoMotors.Web/HuergoMotors.Web.csproj
@@ -60,8 +60,14 @@
     <Reference Include="System.Xml.Linq" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="AMS\webAccesoriosAlta.aspx" />
+    <Content Include="AMS\webClientesAlta.aspx" />
+    <Content Include="AMS\webVehiculosAlta.aspx" />
+    <Content Include="AMS\webVendedoresAlta.aspx" />
     <Content Include="Principal.Master" />
     <Content Include="Tablas.Master" />
+    <Content Include="webHome.aspx" />
+    <Content Include="webLogin.aspx" />
     <Content Include="webVendedores.aspx" />
     <Content Include="webVentas.aspx" />
     <None Include="Web.Debug.config">
@@ -75,14 +81,37 @@
     <Content Include="webAccesorios.aspx" />
     <Content Include="webClientes.aspx" />
     <Content Include="webVehiculos.aspx" />
-    <Content Include="AMS\webVendedoresAlta.aspx" />
-    <Content Include="AMS\webAccesoriosAlta.aspx" />
-    <Content Include="AMS\webClientesAlta.aspx" />
     <Content Include="Web.config" />
-    <Content Include="AMS\webVehiculosAlta.aspx" />
-    <Content Include="AMS\webVentasAlta.aspx" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AMS\webAccesoriosAlta.aspx.cs">
+      <DependentUpon>webAccesoriosAlta.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="AMS\webAccesoriosAlta.aspx.designer.cs">
+      <DependentUpon>webAccesoriosAlta.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="AMS\webClientesAlta.aspx.cs">
+      <DependentUpon>webClientesAlta.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="AMS\webClientesAlta.aspx.designer.cs">
+      <DependentUpon>webClientesAlta.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="AMS\webVehiculosAlta.aspx.cs">
+      <DependentUpon>webVehiculosAlta.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="AMS\webVehiculosAlta.aspx.designer.cs">
+      <DependentUpon>webVehiculosAlta.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="AMS\webVendedoresAlta.aspx.cs">
+      <DependentUpon>webVendedoresAlta.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="AMS\webVendedoresAlta.aspx.designer.cs">
+      <DependentUpon>webVendedoresAlta.aspx</DependentUpon>
+    </Compile>
     <Compile Include="HelperWeb.cs" />
     <Compile Include="Principal.Master.cs">
       <DependentUpon>Principal.Master</DependentUpon>
@@ -113,47 +142,26 @@
     <Compile Include="webClientes.aspx.designer.cs">
       <DependentUpon>webClientes.aspx</DependentUpon>
     </Compile>
+    <Compile Include="webHome.aspx.cs">
+      <DependentUpon>webHome.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="webHome.aspx.designer.cs">
+      <DependentUpon>webHome.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="webLogin.aspx.cs">
+      <DependentUpon>webLogin.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="webLogin.aspx.designer.cs">
+      <DependentUpon>webLogin.aspx</DependentUpon>
+    </Compile>
     <Compile Include="webVehiculos.aspx.cs">
       <DependentUpon>webVehiculos.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
     </Compile>
     <Compile Include="webVehiculos.aspx.designer.cs">
       <DependentUpon>webVehiculos.aspx</DependentUpon>
-    </Compile>
-    <Compile Include="AMS\webVendedoresAlta.aspx.cs">
-      <DependentUpon>webVendedoresAlta.aspx</DependentUpon>
-      <SubType>ASPXCodeBehind</SubType>
-    </Compile>
-    <Compile Include="AMS\webVendedoresAlta.aspx.designer.cs">
-      <DependentUpon>webVendedoresAlta.aspx</DependentUpon>
-    </Compile>
-    <Compile Include="AMS\webAccesoriosAlta.aspx.cs">
-      <DependentUpon>webAccesoriosAlta.aspx</DependentUpon>
-      <SubType>ASPXCodeBehind</SubType>
-    </Compile>
-    <Compile Include="AMS\webAccesoriosAlta.aspx.designer.cs">
-      <DependentUpon>webAccesoriosAlta.aspx</DependentUpon>
-    </Compile>
-    <Compile Include="AMS\webClientesAlta.aspx.cs">
-      <DependentUpon>webClientesAlta.aspx</DependentUpon>
-      <SubType>ASPXCodeBehind</SubType>
-    </Compile>
-    <Compile Include="AMS\webClientesAlta.aspx.designer.cs">
-      <DependentUpon>webClientesAlta.aspx</DependentUpon>
-    </Compile>
-    <Compile Include="AMS\webVehiculosAlta.aspx.cs">
-      <DependentUpon>webVehiculosAlta.aspx</DependentUpon>
-      <SubType>ASPXCodeBehind</SubType>
-    </Compile>
-    <Compile Include="AMS\webVehiculosAlta.aspx.designer.cs">
-      <DependentUpon>webVehiculosAlta.aspx</DependentUpon>
-    </Compile>
-    <Compile Include="AMS\webVentasAlta.aspx.cs">
-      <DependentUpon>webVentasAlta.aspx</DependentUpon>
-      <SubType>ASPXCodeBehind</SubType>
-    </Compile>
-    <Compile Include="AMS\webVentasAlta.aspx.designer.cs">
-      <DependentUpon>webVentasAlta.aspx</DependentUpon>
     </Compile>
     <Compile Include="webVendedores.aspx.cs">
       <DependentUpon>webVendedores.aspx</DependentUpon>
