--- a/HuergoMotors.Web/Web.config
+++ b/HuergoMotors.Web/Web.config
@@ -14,6 +14,10 @@
   -->
   <system.web>
     <compilation debug="true" targetFramework="4.7.2"/>
-    <pages controlRenderingCompatibilityVersion="4.0"/>
+    <pages controlRenderingCompatibilityVersion="4.0">
+		<controls>
+		 <add tagPrefix="uc" src ="~/UserControlBuscador.ascx" tagName="Buscador"/>
+		</controls>
+	</pages>
   </system.web>
 </configuration>
