--- a/HuergoMotors.Web/Web.config
+++ b/HuergoMotors.Web/Web.config
@@ -14,6 +14,12 @@
   -->
   <system.web>
     <compilation debug="true" targetFramework="4.7.2"/>
-    <pages controlRenderingCompatibilityVersion="4.0"/>
+    <pages controlRenderingCompatibilityVersion="4.0">
+		<controls>
+		    <add tagPrefix="uc" src ="~/UserControls/UserControlBuscador.ascx" tagName="Buscador"/>
+		    <add tagPrefix="uc" src ="~/UserControls/UserControlCampoTexto.ascx" tagName="CampoTexto"/>
+		    <add tagPrefix="uc" src ="~/UserControls/UserControlCampoDropDown.ascx" tagName="CampoDropDown"/>
+		</controls>
+	</pages>
   </system.web>
 </configuration>
