Login responsive terminado y Home mejorado

--- a/HuergoMotors.Web/HuergoMotors.Web.csproj
+++ b/HuergoMotors.Web/HuergoMotors.Web.csproj
@@ -67,6 +67,7 @@
     <Content Include="AMS\webVentasAlta.aspx" />
     <Content Include="Principal.Master" />
     <Content Include="Resources\HuergoMotorsIcono.png" />
+    <Content Include="Resources\HuergoMotorsLogo.png" />
     <Content Include="UserControls\UserControlBuscador.ascx" />
     <Content Include="UserControls\UserControlCampoDropDown.ascx" />
     <Content Include="UserControls\UserControlCampoTexto.ascx" />
