--- a/HuergoMotors.Web/HuergoMotors.Web.csproj
+++ b/HuergoMotors.Web/HuergoMotors.Web.csproj
@@ -66,14 +66,16 @@
     <Content Include="AMS\webVendedoresAlta.aspx" />
     <Content Include="AMS\webVentasAlta.aspx" />
     <Content Include="Principal.Master" />
+    <Content Include="Resources\HuergoMotorsIcono.png" />
+    <Content Include="Resources\HuergoMotorsLogo.png" />
     <Content Include="UserControls\UserControlBuscador.ascx" />
     <Content Include="UserControls\UserControlCampoDropDown.ascx" />
     <Content Include="UserControls\UserControlCampoTexto.ascx" />
-
     <Content Include="webHome.aspx" />
     <Content Include="webLogin.aspx" />
     <Content Include="webVendedores.aspx" />
     <Content Include="webVentas.aspx" />
+    <Content Include="webVentasAccesorios.aspx" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
@@ -132,7 +134,6 @@
       <DependentUpon>Principal.Master</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
-
     <Compile Include="UserControls\UserControlBuscador.ascx.cs">
       <DependentUpon>UserControlBuscador.ascx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
@@ -156,7 +157,6 @@
     </Compile>
     <Compile Include="UserControls\UserControlCampoTexto.ascx.designer.cs">
       <DependentUpon>UserControlCampoTexto.ascx</DependentUpon>
-
     </Compile>
     <Compile Include="webAccesorios.aspx.cs">
       <DependentUpon>webAccesorios.aspx</DependentUpon>
@@ -206,6 +206,13 @@
     </Compile>
     <Compile Include="webVentas.aspx.designer.cs">
       <DependentUpon>webVentas.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="webVentasAccesorios.aspx.cs">
+      <DependentUpon>webVentasAccesorios.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="webVentasAccesorios.aspx.designer.cs">
+      <DependentUpon>webVentasAccesorios.aspx</DependentUpon>
     </Compile>
   </ItemGroup>
   <ItemGroup>
